@@ -4,6 +4,7 @@
 - offpunk/netcache: fix IPv6 as an URL (bug #40)
 - ansicat: display empty files (instead of opening them with xdg-open)
 - fix escape sequence warning in python 3.12 (by Étienne Mollier) (Debian #1064209)
+- ansicat : fix crash when feedparser is crashing on bad RSS
 
 ## 2.2 - February 13th 2023
 - cache folder is now configurable through $OFFPUNK_CACHE_PATH environment variable (by prx)
